--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "coverage": "vitest --coverage"
   },
   "dependencies": {
-    "valibot": "^0.27.0"
+    "valibot": "^0.27.1"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
