--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "valibot": "^0.27.1"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^1.2.2",
     "typescript": "^5.3.3",
     "vitest": "^1.2.2"
   }
