--- a/schemas/valibot/numbers/package.json
+++ b/schemas/valibot/numbers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@schemasjs/valibot-numbers",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Javascript (and Typescript) valibot number schemas",
   "author": "Cristobal Contreras Rubio",
   "license": "MIT",
@@ -25,13 +25,15 @@
   "scripts": {
     "test": "vitest",
     "coverage": "vitest --coverage",
-    "build": "tsc"
+    "build": "tsc",
+    "publish": "npm run build && npm publish --access public"
   },
   "dependencies": {
     "valibot": "^0.28.1"
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^1.2.2",
+    "typescript": "^5.3.3",
     "vitest": "^1.2.2"
   }
 }
