--- a/schemas/valibot/numbers/package.json
+++ b/schemas/valibot/numbers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@schemasjs/valibot-numbers",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Javascript (and Typescript) valibot number schemas",
   "author": "Cristobal Contreras Rubio",
   "license": "MIT",
@@ -21,7 +21,7 @@
     "float",
     "c-types"
   ],
-  "main": "lib/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "vitest",
     "coverage": "vitest --coverage",
