--- a/schemas/valibot/numbers/package.json
+++ b/schemas/valibot/numbers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@schemasjs/valibot-numbers",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "Javascript (and Typescript) valibot number schemas",
   "author": "Cristobal Contreras Rubio",
   "license": "MIT",
@@ -21,12 +21,11 @@
     "float",
     "c-types"
   ],
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "vitest",
     "coverage": "vitest --coverage",
-    "build": "tsc",
-    "publish": "npm run build && npm publish --access public"
+    "build": "tsc"
   },
   "dependencies": {
     "valibot": "^0.28.1"
