--- a/schemas/valibot/numbers/package.json
+++ b/schemas/valibot/numbers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@schemasjs/valibot-numbers",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Javascript (and Typescript) valibot number schemas",
   "author": "Cristobal Contreras Rubio",
   "license": "MIT",
@@ -13,15 +13,25 @@
     "url": "https://github.com/crisconru/schemasjs/issues"
   },
   "keywords": [
-    "schemas",
-    "valibot",
-    "types",
     "uint",
     "int",
     "float",
-    "c-types"
+    "c-types",
+    "valibot",
+    "types",
+    "schemas",
+    "modular",
+    "typescript",
+    "schema",
+    "validation",
+    "parsing",
+    "type-safe",
+    "runtime"
   ],
-  "main": "lib/index.js",
+  "type": "module",
+  "files": ["lib"],
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
     "test": "vitest",
     "coverage": "vitest --coverage",
