--- a/schemas/valibot/numbers/package.json
+++ b/schemas/valibot/numbers/package.json
@@ -32,6 +32,9 @@
   "files": ["lib"],
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "test": "vitest",
     "coverage": "vitest --coverage",
