--- a/.github/workflows/valibot-numbers.yml
+++ b/.github/workflows/valibot-numbers.yml
@@ -12,8 +12,11 @@ jobs:
   test:
     name: 🧪 Test
     runs-on: ubuntu-latest
-    env:
-      working-directory: ./schemas/valibot/numbers
+    defaults:
+      run:
+        working-directory: ./schemas/valibot/numbers
+    # env:
+      # working-directory: ./schemas/valibot/numbers
 
     strategy:
       matrix:
@@ -31,17 +34,20 @@ jobs:
 
       - name: 📥 Install Dependencies
         run: npm install
-        working-directory: ${{ env.working-directory }}
+        # working-directory: ${{ env.working-directory }}
 
       - name: 🧑‍🔬 Tests
         run: npm run test
-        working-directory: ${{ env.working-directory }}
+        # working-directory: ${{ env.working-directory }}
 
   publish:
     name: 🚀 Publish
     runs-on: ubuntu-latest
-    env:
-      working-directory: ./schemas/valibot/numbers
+    defaults:
+      run:
+        working-directory: ./schemas/valibot/numbers
+    # env:
+      # working-directory: ./schemas/valibot/numbers
     needs: test
     if: github.ref == 'refs/heads/main'
 
@@ -57,14 +63,14 @@ jobs:
 
       - name: 📥 Install Dependencies
         run: npm install
-        working-directory: ${{ env.working-directory }}
+        # working-directory: ${{ env.working-directory }}
 
       - name: 🛠️ Build
         run: npm run build
-        working-directory: ${{ env.working-directory }}
+        # working-directory: ${{ env.working-directory }}
 
       - name: 🚀 Publish to npm
         run: npm publish --access public
-        working-directory: ${{ env.working-directory }}
+        # working-directory: ${{ env.working-directory }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
