valibot-numbers: run coverage without watcher

--- a/schemas/valibot/numbers/package.json
+++ b/schemas/valibot/numbers/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "test": "vitest",
-    "coverage": "vitest --coverage",
+    "coverage": "vitest run --coverage",
     "build": "tsc"
   },
   "dependencies": {
