--- a/package.json
+++ b/package.json
@@ -23,7 +23,21 @@
   ],
   "type": "module",
   "main": "index.js",
+  "workspaces": [
+    "schemas/valibot/*",
+    "schemas/zod/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:valibot-numbers": "npm run build --workspace=@schemasjs/valibot-numbers",
+    "test:valibot-numbers": "npm run test --workspace=@schemasjs/valibot-numbers",
+    "coverage:valibot-numbers": "npm run coverage --workspace=@schemasjs/valibot-numbers",
+    "build:zod-numbers": "npm run build --workspace=@schemasjs/zod-numbers",
+    "test:zod-numbers": "npm run test --workspace=@schemasjs/zod-numbers",
+    "coverage:zod-numbers": "npm run coverage --workspace=@schemasjs/zod-numbers"
+  },
+  "devDependencies": {
+    "@vitest/coverage-v8": "^1.3.1",
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.1"
   }
 }
