valibot-numbers: update ci/cd for monorepo

--- a/.github/workflows/valibot-numbers.yml
+++ b/.github/workflows/valibot-numbers.yml
@@ -28,15 +28,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-          cache-dependency-path: ${{ env.working-directory }}
 
       - name: 📥 Install Dependencies
         run: npm install
-        working-directory: ${{ env.working-directory }}
 
       - name: 🧑‍🔬 Tests
-        run: npm run test
-        working-directory: ${{ env.working-directory }}
+        run: "npm run test:valibot-numbers"
 
   publish:
     name: 🚀 Publish
@@ -55,18 +52,14 @@ jobs:
         with:
           node-version: 18
           registry-url: "https://registry.npmjs.org"
-          cache-dependency-path: ${{ env.working-directory }}
 
       - name: 📥 Install Dependencies
         run: npm install
-        working-directory: ${{ env.working-directory }}
 
       - name: 🛠️ Build
-        run: npm run build
-        working-directory: ${{ env.working-directory }}
+        run: "npm run build:valibot-numbers"
 
       - name: 🚀 Publish to npm
-        run: npm publish --access public
-        working-directory: ${{ env.working-directory }}
+        run: "npm publish --access public --workspace=@schemasjs/valibot-numbers"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
