--- a/package.json
+++ b/package.json
@@ -28,16 +28,26 @@
     "schemas/zod/*"
   ],
   "scripts": {
-    "build:valibot-numbers": "npm run build --workspace=@schemasjs/valibot-numbers",
-    "test:valibot-numbers": "npm run test --workspace=@schemasjs/valibot-numbers",
-    "coverage:valibot-numbers": "npm run coverage --workspace=@schemasjs/valibot-numbers",
-    "build:zod-numbers": "npm run build --workspace=@schemasjs/zod-numbers",
-    "test:zod-numbers": "npm run test --workspace=@schemasjs/zod-numbers",
-    "coverage:zod-numbers": "npm run coverage --workspace=@schemasjs/zod-numbers"
+    "valibot-numbers:lint": "npm run lint --workspace=@schemasjs/valibot-numbers",
+    "valibot-numbers:format": "npm run format --workspace=@schemasjs/valibot-numbers",
+    "valibot-numbers:build": "npm run build --workspace=@schemasjs/valibot-numbers",
+    "valibot-numbers:test": "npm run test --workspace=@schemasjs/valibot-numbers",
+    "valibot-numbers:coverage": "npm run coverage --workspace=@schemasjs/valibot-numbers",
+    "zod-numbers:lint": "npm run lint --workspace=@schemasjs/zod-numbers",
+    "zod-numbers:format": "npm run format --workspace=@schemasjs/zod-numbers",
+    "zod-numbers:build": "npm run build --workspace=@schemasjs/zod-numbers",
+    "zod-numbers:test": "npm run test --workspace=@schemasjs/zod-numbers",
+    "zod-numbers:coverage": "npm run coverage --workspace=@schemasjs/zod-numbers"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@vitest/coverage-v8": "^1.3.1",
-    "typescript": "^5.3.3",
+    "eslint": "^8.57.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "typescript": "^5.4.2",
     "vitest": "^1.3.1"
   }
 }
