--- a/package.json
+++ b/package.json
@@ -28,26 +28,27 @@
     "schemas/zod/*"
   ],
   "scripts": {
+    "valibot-numbers:build": "npm run build --workspace=@schemasjs/valibot-numbers",
     "valibot-numbers:lint": "npm run lint --workspace=@schemasjs/valibot-numbers",
     "valibot-numbers:format": "npm run format --workspace=@schemasjs/valibot-numbers",
-    "valibot-numbers:build": "npm run build --workspace=@schemasjs/valibot-numbers",
     "valibot-numbers:test": "npm run test --workspace=@schemasjs/valibot-numbers",
-    "valibot-numbers:coverage": "npm run coverage --workspace=@schemasjs/valibot-numbers",
+    "valibot-numbers:test:coverage": "npm run test:coverage --workspace=@schemasjs/valibot-numbers",
+    "zod-numbers:build": "npm run build --workspace=@schemasjs/zod-numbers",
     "zod-numbers:lint": "npm run lint --workspace=@schemasjs/zod-numbers",
     "zod-numbers:format": "npm run format --workspace=@schemasjs/zod-numbers",
-    "zod-numbers:build": "npm run build --workspace=@schemasjs/zod-numbers",
     "zod-numbers:test": "npm run test --workspace=@schemasjs/zod-numbers",
-    "zod-numbers:coverage": "npm run coverage --workspace=@schemasjs/zod-numbers"
+    "zod-numbers:test:coverage": "npm run test:coverage --workspace=@schemasjs/zod-numbers"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@vitest/coverage-v8": "^1.3.1",
-    "eslint": "^8.57.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
+    "ts-standard": "^12.0.2",
+    "tsup": "^8.0.2",
     "typescript": "^5.4.2",
     "vitest": "^1.3.1"
+  },
+  "ts-standard": {
+    "ignore": [
+      "vitest.workspace.ts"
+    ]
   }
 }
