--- a/.github/workflows/zod-numbers.yml
+++ b/.github/workflows/zod-numbers.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm install
 
       - name: 🧑‍🔬 Tests
-        run: "npm run zod-numbers:test"
+        run: "npm run zod:numbers:test"
 
   publish:
     name: 🚀 Publish
@@ -54,7 +54,7 @@ jobs:
         run: npm install
 
       - name: 🛠️ Build
-        run: npm run zod-numbers:build
+        run: npm run zod:numbers:build
 
       - name: 🚀 Publish to npm
         run: "npm publish --access public --workspace=@schemasjs/zod-numbers"
