--- a/schemas/valibot/numbers/package.json
+++ b/schemas/valibot/numbers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@schemasjs/valibot-numbers",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Javascript (and Typescript) valibot number schemas",
   "author": "Cristobal Contreras Rubio",
   "license": "MIT",
@@ -57,8 +57,8 @@
     "test": "vitest",
     "test:coverage": "vitest run --coverage"
   },
-  "dependencies": {
-    "valibot": "^0.28.1"
+  "peerDependencies": {
+    "valibot": "^0.30.0"
   },
   "ts-standard": {
     "ignore": [
