--- a/schemas/zod/numbers/package.json
+++ b/schemas/zod/numbers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@schemasjs/zod-numbers",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Javascript (and Typescript) zod number schemas",
   "author": "Cristobal Contreras Rubio",
   "license": "MIT",
@@ -57,8 +57,8 @@
     "test": "vitest",
     "test:coverage": "vitest run --coverage"
   },
-  "dependencies": {
-    "zod": "^3.22.4"
+  "peerDependencies": {
+    "zod": "^3.23.8"
   },
   "ts-standard": {
     "ignore": [
