--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "main": "index.js",
   "workspaces": [
     "schemas/valibot/*",
-    "schemas/zod/*"
+    "schemas/zod/*",
+    "validator/"
   ],
   "scripts": {
     "valibot:numbers:build": "npm run build --workspace=@schemasjs/valibot-numbers",
@@ -37,14 +38,19 @@
     "zod:numbers:lint": "npm run lint --workspace=@schemasjs/zod-numbers",
     "zod:numbers:format": "npm run format --workspace=@schemasjs/zod-numbers",
     "zod:numbers:test": "npm run test --workspace=@schemasjs/zod-numbers",
-    "zod:numbers:test:coverage": "npm run test:coverage --workspace=@schemasjs/zod-numbers"
+    "zod:numbers:test:coverage": "npm run test:coverage --workspace=@schemasjs/zod-numbers",
+    "validator:build": "npm run build --workspace=@schemasjs/validator",
+    "validator:lint": "npm run lint --workspace=@schemasjs/validator",
+    "validator:format": "npm run format --workspace=@schemasjs/validator",
+    "validator:test": "npm run test --workspace=@schemasjs/validator",
+    "validator:test:coverage": "npm run test:coverage --workspace=@schemasjs/validator"
   },
   "devDependencies": {
-    "@vitest/coverage-v8": "^1.3.1",
+    "@vitest/coverage-v8": "^1.6.0",
     "ts-standard": "^12.0.2",
-    "tsup": "^8.0.2",
-    "typescript": "^5.4.2",
-    "vitest": "^1.3.1"
+    "tsup": "^8.1.0",
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   },
   "ts-standard": {
     "ignore": [
