--- a/schemas/valibot/numbers/package.json
+++ b/schemas/valibot/numbers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@schemasjs/valibot-numbers",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Javascript (and Typescript) valibot number schemas",
   "author": "Cristobal Contreras Rubio",
   "license": "MIT",
@@ -58,7 +58,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "peerDependencies": {
-    "valibot": "^0.33.3"
+    "valibot": ">0.31.0"
   },
   "ts-standard": {
     "ignore": [
